# my-web3-gift-app

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
contract/: Cargo.toml
contract/src/: lib.rs
